[tool.poetry]
name = "vision-client-library"
version = "0.1.0"
description = "Client library for engaging with the Vision system"
authors = ["Vision XXX <contact@XXX>"]
license = "GPL-3.0-only"
readme = "README.md"
packages = [
    { include = "vision"}
]
include = [
    "vision/client-library.yml",
    "vision/client-library.env"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["vision"]
namespaces = true

[tool.poetry.group.test.dependencies]
pytest = "8.3.5"
pytest-cov = "6.1.0"

[tool.poetry.group.lint.dependencies]
bandit = "1.8.3"
flake8 = "7.2.0"
isort = "6.0.1"
mypy = "1.0.1"
types-pyyaml = "6.0.12.20250402"
types-requests = "2.32.0.20250328"
yapf = "0.43.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "4.2.0"

[tool.poetry.dependencies]
vision-common = "0.2.0"
python = "^3.13"
Cerberus = "1.3.4"
PyYAML = "6.0.1"
requests = "2.32.3"
web3 = "6.5.0"
pyaml-env = "1.2.2"
python-dotenv = "1.0.1"
hexbytes = "1.2.1"
semantic-version = "2.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
